InsuranceOrg/force-app/main/default/objects/vlocity_ins__DocumentClauseCondition__c/vlocity_ins__DocumentClauseCondition__c.object-meta.xml
<CustomObject>
    <label>Document Clause Condition</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Clause Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>