InsuranceOrg/force-app/main/default/objects/vlocity_ins__DocumentClauseCondition__c/fields/vlocity_ins__IsRequired__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__IsRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>