InsuranceOrg/force-app/main/default/objects/vlocity_ins__DocumentClauseCondition__c/fields/vlocity_ins__ProductId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Product_Terms_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>